--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   
   <title>Frontend Mentor | QR code component</title>
 
@@ -34,7 +34,7 @@
      </style>
 </head>
 <body><div class="card" >
-<img src="./image-qr-code.png" alt="qr code image">
+<img src="/image-qr-code.png" alt="qr code image">
 
   <div class="container"> 
   <h4><b>Improve your front-end skills by building projects</b></h4>
