--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
      </style>
 </head>
 <body><div class="card" >
-<img src="/image-qr-code.png" alt="qr code image">
+<img src="image-qr-code.png" alt="qr code image">
 
   <div class="container"> 
   <h4><b>Improve your front-end skills by building projects</b></h4>
